--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>$LEEP – Wake Up Rich</title>
+  <title>$LEEP – Buy, Sleep, Wake Up Rich</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0; padding: 0; box-sizing: border-box;
     }
+
     body {
       font-family: 'Roboto', sans-serif;
       background: linear-gradient(to bottom right, #0e0e0e, #1c1c1c);
@@ -19,7 +20,6 @@
       text-align: center;
       padding: 120px 20px 80px;
       background: linear-gradient(to right, #8e2de2, #4a00e0);
-      color: #fff;
       animation: fadeIn 2s ease-in;
     }
 
@@ -32,6 +32,12 @@
       white-space: nowrap;
     }
 
+    header p {
+      margin-top: 20px;
+      font-size: 1.3rem;
+      font-style: italic;
+    }
+
     @keyframes typewriter {
       from { width: 0; }
       to { width: 100%; }
@@ -42,12 +48,6 @@
       to { opacity: 1; }
     }
 
-    header p {
-      margin-top: 20px;
-      font-size: 1.3rem;
-      font-style: italic;
-    }
-
     nav {
       background: #111;
       display: flex;
@@ -55,6 +55,7 @@
       gap: 30px;
       padding: 15px;
       border-bottom: 2px solid #ff007a;
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -75,7 +76,7 @@
     }
 
     .section-title {
-      font-size: 2.8rem;
+      font-size: 2.5rem;
       margin-bottom: 30px;
       color: #ff00ff;
       text-align: center;
@@ -144,7 +145,7 @@
 
   <header>
     <h1>Welcome to $LEEP</h1>
-    <p>Buy, Sleep, Wake Up Rich – The $LEEP Way 😴🚀</p>
+    <p>Buy. Sleep. Wake Up Rich. Repeat. 😴🚀</p>
   </header>
 
   <nav>
@@ -157,7 +158,8 @@
   <section id="about">
     <h2 class="section-title">What is $LEEP?</h2>
     <p style="text-align:center; max-width: 700px; margin:auto;">
-      $LEEP isn’t just a coin. It's a lifestyle. No dev tax, no rugs, no VC games – just a sleepy community dreaming of lambo mornings. Powered by Solana, $LEEP is made to moon while you're snoozing.
+      $LEEP is the sleepiest meme coin on Solana. No VC. No team tokens. No utility – just pure community dreams.  
+      $LEEP is for the dreamers, the degens, and everyone who wants to make it while napping.
     </p>
   </section>
 
@@ -170,7 +172,7 @@
       </div>
       <div class="card">
         <h3>Taxes</h3>
-        <p>0% Buy / 0% Sell<br>No funny business</p>
+        <p>0% Buy / 0% Sell<br>No rug vibes 🚫</p>
       </div>
       <div class="card">
         <h3>Chain</h3>
@@ -183,33 +185,42 @@
     <h2 class="section-title">Roadmap to Dreamland</h2>
     <div class="tokenomics">
       <div class="card">
-        <h3>Phase 1 – 🛌 Nap Time</h3>
-        <p>Fair Launch<br>Website Live<br>Community Snooze Party</p>
+        <h3>Phase 1 – Nap Time</h3>
+        <p>Fair Launch<br>Website Live<br>First Sleep Campaign</p>
       </div>
       <div class="card">
         <h3>Phase 2 – REM Mode</h3>
-        <p>DEX Listings<br>Viral Dreams on Twitter<br>Memes > Marketing</p>
+        <p>DEX Listings<br>Trending on Twitter<br>Memes Take Over</p>
       </div>
       <div class="card">
         <h3>Phase 3 – Wake Up</h3>
-        <p>Massive Burn<br>Sleep-to-Earn Hype<br>IRL Merch Drop</p>
+        <p>Burns<br>IRL Merch Drops<br>Sleep-to-Earn Experiments</p>
       </div>
     </div>
   </section>
 
   <section id="buy">
-    <h2 class="section-title">Buy $LEEP Now</h2>
-    <div style="text-align:center;">
-      <a href="#" class="btn">Buy on Pump.fun</a>
-      <a href="#" class="btn">Buy on LetsBonk</a>
-      <a href="#" class="btn">Trade on Photon</a>
-      <br/><br/>
-      <a href="#" class="btn">🔍 View on Solana Explorer</a>
+    <h2 class="section-title">Buy & Join the Sleep Army</h2>
+    <div style="text-align:center; max-width: 800px; margin: auto;">
+
+      <!-- Buy Buttons -->
+      <div style="margin-bottom: 30px;">
+        <a href="https://pump.fun/" target="_blank" class="btn">🚀 Buy on Pump.fun</a>
+        <a href="https://letsbonk.io/" target="_blank" class="btn">🔥 Buy on LetsBonk</a>
+        <a href="https://photon-sol.tinyastro.io/" target="_blank" class="btn">⚡ Trade on Photon</a>
+        <a href="https://solscan.io/token/REPLACE_YOUR_TOKEN_ADDRESS" target="_blank" class="btn">🔍 View on Solana Explorer</a>
+      </div>
+
+      <!-- Social Buttons -->
+      <div style="margin-top: 20px;">
+        <a href="https://x.com/sleep_for_sol?t=oymFx6SKCWtNczAqyPCfug&s=08" target="_blank" class="btn">🐦 Follow us on Twitter</a>
+        <a href="https://t.me/buysleepwakeuprich" target="_blank" class="btn">💬 Join Telegram</a>
+      </div>
     </div>
   </section>
 
   <footer>
-    <p>©️ 2025 $LEEP Coin. Powered by dreams. Fueled by memes.</p>
+    <p>© 2025 $LEEP Coin – Powered by Dreams, Fueled by Memes.</p>
   </footer>
 
 </body>
